--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,61 @@
-name: CI
+name: CI & Automation
 
-# Test workflow simple pour vérifier trigger push sur master
 on:
   push:
     branches:
       - master
 
 jobs:
-  build:
+  build-and-automate:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Run a one-line script
-        run: echo "Hello, world!"
+      - name: Checkout code
+        uses: actions/checkout@v3
 
+      - name: Setup Python 3.x
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
+      - name: Install dependencies
+        run: |
+          if [ -f requirements.txt ]; then
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+          else
+            echo "No requirements.txt found, skipping install"
+          fi
+
+      - name: Run tests
+        run: |
+          if [ -d tests ]; then
+            pytest
+          else
+            echo "No tests directory, skipping tests"
+          fi
+
+      - name: Run automation script to modify code
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: python scripts/automation.py
+
+      - name: Commit and push changes if any
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git diff --quiet && git diff --staged --quiet || (
+            git commit -m "Automated code modification via GitHub Actions"
+            git push origin HEAD:automated-changes
+          )
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: Automated code modification via GitHub Actions
+          branch: automated-changes
+          title: Automated code modification
+          body: This PR was created automatically by GitHub Actions.
+          base: master
